# prism-core

./: .env.example  .gitignore  CHANGELOG.md  CLIENT.md  Dockerfile  PROJECT_STRUCTURE.md  README.md  authenticate_hf.py  client.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.sh  schema.md  server.md  start_llm_agent.sh  test_client.py  test_db.py  tool_demo.py  vector_db_demo.py
.github/workflows/: build-and-release.yml
Industrial_DB_sample/: SEMI_CMP_SENSORS.csv  SEMI_CVD_SENSORS.csv  SEMI_EQUIPMENT_SENSOR.csv  SEMI_ETCH_SENSORS.csv  SEMI_IMPLANT_SENSORS.csv  SEMI_LOT_MANAGE.csv  SEMI_PARAM_MEASURE.csv  SEMI_PHOTO_SENSORS.csv  SEMI_PROCESS_HISTORY.csv  SEMI_SENSOR_ALERT_CONFIG.csv
Industrial_DB_sample/dataset_v1/: SEMI_CMP_SENSORS.csv  SEMI_CVD_SENSORS.csv  SEMI_EQUIPMENT_SENSOR.csv  SEMI_ETCH_SENSORS.csv  SEMI_IMPLANT_SENSORS.csv  SEMI_LOT_MANAGE.csv  SEMI_PARAM_MEASURE.csv  SEMI_PHOTO_SENSORS.csv  SEMI_PROCESS_HISTORY.csv  SEMI_SENSOR_ALERT_CONFIG.csv  제조공정db.md
Industrial_DB_sample/dataset_v2/: SEMI_CMP_SENSORS.csv  SEMI_CMP_SENSORS_ANOMALY_INFO.json  SEMI_CVD_SENSORS.csv  SEMI_CVD_SENSORS_ANOMALY_INFO.json  SEMI_ETCH_SENSORS.csv  SEMI_ETCH_SENSORS_ANOMALY_INFO.json  SEMI_ION_SENSORS.csv  SEMI_ION_SENSORS_ANOMALY_INFO.json  SEMI_PHOTO_SENSORS.csv  SEMI_PHOTO_SENSORS_ANOMALY_INFO.json
core/: __init__.py  agent_registry.py  api.py  config.py  llm_service.py  schemas.py
core/agents/: agent_manager.py  orchestrator.py  workflow_manager.py
core/data/: postgresql.py  schemas.py  service.py
core/llm/: __init__.py  agent_registry.py  api.py  base.py  openai_compat_service.py  prism_llm_service.py  schemas.py  tools.py  vllm_service.py
core/tools/: __init__.py  api.py  dynamic_tool.py  memory_search_tool.py  rag_search_tool.py  schemas.py
core/vector_db/: __init__.py  api.py  client.py
docker/: Dockerfile  builde_image.sh  make_contianer.sh
prism_core/: __init__.py
prism_core/core/: __init__.py  config.py
prism_core/core/agents/: __init__.py  base.py  workflow_manager.py
prism_core/core/data/: __init__.py  api.py  base.py  postgresql.py
prism_core/core/llm/: __init__.py  agent_registry.py  api.py  base.py  prism_llm_service.py  schemas.py  tool_orchestrator.py  tools.py
prism_core/core/tools/: __init__.py  base.py  compliance_tool.py  database_tool.py  dynamic_tool.py  memory_search_tool.py  rag_search_tool.py  registry.py  schemas.py
prism_core/core/vector_db/: encoder.py  schemas.py
scripts/: init_db.py  verify_db.py
tests/: test_api.py
