[project]
name = "prism-orch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.11.7",
    "vllm>=0.10.0",
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "click>=8.2.1",
    "python-dotenv",
    "huggingface_hub",
]

[tool.setuptools]
packages = ["core"]
